--- a/user-authentication/index.html
+++ b/user-authentication/index.html
@@ -280,16 +280,25 @@
       position: relative;
       overflow: hidden;
     }
+    .banner-buttons .btn a {
+      text-decoration: none;
+    }
 
     .banner-buttons .shop {
       background: green;
+    }
+    .banner-buttons .shop a{
       color: white;
+
     }
 
     .banner-buttons .learn {
       background: white;
-      color: green;
       border: 2px solid green;
+    }
+    .banner-buttons .learn a {
+      color: green;
+
     }
 
     .banner-buttons .btn::before {
@@ -630,8 +639,8 @@
     </div>
 
     <div class="banner-buttons">
-      <button class="btn shop">Shop Now</button>
-      <button class="btn learn">Learn More</button>
+      <button class="btn shop"><a href="shop.html">Shop Now</a></button>
+      <button class="btn learn"><a href="about.html">Learn More</a></button>
     </div>
   </section>
 
@@ -653,7 +662,7 @@
           <div class="card-content">
             <h3>Ready-to-cook Instant Mixes</h3>
             <p>Convenient and healthy cooking mixes prepared with traditional recipes.</p>
-            <a href="#" class="explore-link">Explore Category →</a>
+            <a href="shop.html?category=readyToCookMixes" class="explore-link">Explore Category →</a>
           </div>
         </div>
 
@@ -665,7 +674,7 @@
           <div class="card-content">
             <h3>Instant Soup Mix</h3>
             <p>Nutritious and quick soups made from organic ingredients.</p>
-            <a href="#" class="explore-link">Explore Category →</a>
+            <a href="shop.html?category=instantSoup" class="explore-link">Explore Category →</a>
           </div>
         </div>
 
@@ -677,7 +686,7 @@
           <div class="card-content">
             <h3>Idli Podi's</h3>
             <p>Flavorful spice powders for enhancing traditional dishes.</p>
-            <a href="#" class="explore-link">Explore Category →</a>
+            <a href="shop.html?category=idliPodi" class="explore-link">Explore Category →</a>
           </div>
         </div>
 
@@ -689,7 +698,7 @@
           <div class="card-content">
             <h3>Instant</h3>
             <p>Ready-to-use mixes for soups, snacks, and more.</p>
-            <a href="#" class="explore-link">Explore Category →</a>
+            <a href="shop.html?category=instant" class="explore-link">Explore Category →</a>
           </div>
         </div>
 
@@ -701,7 +710,7 @@
           <div class="card-content">
             <h3>Herbal Products</h3>
             <p>Natural wellness products and cleansers made from herbs.</p>
-            <a href="#" class="explore-link">Explore Category →</a>
+            <a href="shop.html?category=herbal" class="explore-link">Explore Category →</a>
           </div>
         </div>
       </div>
