--- a/user-authentication/index.html
+++ b/user-authentication/index.html
@@ -768,8 +768,9 @@
       <div class="footer-section company">
         <h4>Company</h4>
         <ul>
+          <li><a href="index.html">Homw</a></li>
+          <li><a href="shop.html">Shop</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="#">FAQ</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
@@ -777,10 +778,11 @@
       <div class="footer-section products">
         <h4>Products</h4>
         <ul>
-          <li><a href="#">Ready-to-cook Instant Mixes</a></li>
-          <li><a href="#">Instant Soup Mix</a></li>
-          <li><a href="#">Idli Podi's</a></li>
-          <li><a href="#">Herbal Products</a></li>
+          <li><a href="shop.html?category=readyToCookMixes">Ready-to-cook Instant Mixes</a></li>
+          <li><a href="shop.html?category=instantSoup">Instant Soup Mix</a></li>
+          <li><a href="shop.html?category=idliPodi">Idli Podi's</a></li>
+          <li><a href="shop.html?category=instant">Instant Products</a></li>
+          <li><a href="shop.html?category=herbal">Herbal Products</a></li>
         </ul>
       </div>
 
