--- a/user-site/contact.html
+++ b/user-site/contact.html
@@ -476,7 +476,7 @@
       </div>
       <div class="whatsapp-box">
         <p>💬 <strong>Quick Order on WhatsApp</strong><br>Place your order instantly via WhatsApp!</p>
-        <a href="#" class="whatsapp-btn">Order on WhatsApp</a>
+        <a href="https://wa.me/919841231996" class="whatsapp-btn">Order on WhatsApp</a>
       </div>
     </div>
 
@@ -485,16 +485,16 @@
       <h2>Send us a Message</h2>
       <form>
         <div class="form-row">
-          <div class="form-group"><input type="text" placeholder="First Name *"></div>
-          <div class="form-group"><input type="text" placeholder="Last Name *"></div>
+          <div class="form-group"><input type="text" placeholder="First Name" required></div>
+          <div class="form-group"><input type="text" placeholder="Last Name"></div>
         </div>
         <div class="form-row">
-          <div class="form-group"><input type="email" placeholder="Email Address *"></div>
-          <div class="form-group"><input type="text" placeholder="Phone Number"></div>
+          <div class="form-group"><input type="email" placeholder="Email Address" required></div>
+          <div class="form-group"><input type="text" placeholder="Phone Number" required></div>
         </div>
-        <div class="form-group"><input type="text" placeholder="Subject *"></div>
-        <div class="form-group"><textarea placeholder="Message *"></textarea></div>
-        <button type="submit" class="send-btn">Send Message</button>
+        <div class="form-group"><input type="text" placeholder="Subject"></div>
+        <div class="form-group"><textarea placeholder="Message"></textarea></div>
+        <button onclick="window.open('https:/wa.me/919841231996', '_blank')" type="submit" class="send-btn">Send Message</button>
       </form>
       <p class="note">We’ll get back to you within 24 hours!</p>
     </div>
