--- a/admin-authentication/admin-dashboard.html
+++ b/admin-authentication/admin-dashboard.html
@@ -182,7 +182,7 @@
 <body>
 
     <aside class="sidebar">
-        <h2>Erumunai Admin</h2>
+        <h2>Ermunai Admin</h2>
         <ul class="nav">
             <li><a href="admin-dashboard.html" data-page="dashboard" class="active">Dashboard</a></li>
             <li><a href="dashboard-product-page.html" data-page="products">Product Details</a></li>
