--- a/admin-authentication/daashboard-setting.html
+++ b/admin-authentication/daashboard-setting.html
@@ -227,7 +227,7 @@
 <body>
   <!-- Sidebar -->
   <aside class="sidebar">
-    <h2>Erumunai Admin</h2>
+    <h2>Ermunai Admin</h2>
     <ul class="nav">
       <li><a href="admin-dashboard.html">Dashboard</a></li>
       <li><a href="dashboard-product-page.html">Product Details</a></li>
