--- a/user-authentication/user-create-acc.html
+++ b/user-authentication/user-create-acc.html
@@ -12,7 +12,7 @@
     <h2>Create Account</h2>
     <form id="signupForm"> <input type="email" id="email" placeholder="Email" required /> <input type="password"
         id="password" placeholder="Password (min 6 chars)" required /> <button type="submit">Sign Up</button> </form>
-    <p>Already have an account? <a href="user-login.html">Login</a></p>
+    <p>Already have an account? <a href="./css/user-create-acc.css">Login</a></p>
     <p id="msg" class="msg"></p>
   </div> <!-- Page logic -->
   <!-- Page logic -->
