--- a/user-authentication/user-login.html
+++ b/user-authentication/user-login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>User Login</title>
-    <link rel="stylesheet" href="user-login.css" />
+    <link rel="stylesheet" href="./css/user-login.css" />
 </head>
 
 <body>
