--- a/admin-authentication/dashboard-product-page.html
+++ b/admin-authentication/dashboard-product-page.html
@@ -269,7 +269,7 @@
 <body>
     <!-- Sidebar -->
     <aside class="sidebar">
-        <h2>Erumunai Admin</h2>
+        <h2>Ermunai Admin</h2>
         <ul class="nav">
             <li><a href="admin-dashboard.html" data-page="dashboard">Dashboard</a></li>
             <li><a href="dashboard-product-page.html" data-page="products" class="active">Product Details</a></li>
