--- a/user-authentication/contact.html
+++ b/user-authentication/contact.html
@@ -417,7 +417,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <img src="logo.jpg" alt="Logo">
+      <img src="./images/logo.jpg" alt="Logo">
       <span>Ermunai Organic Farm Foods</span>
     </div>
 
