--- a/user-authentication/index.html
+++ b/user-authentication/index.html
@@ -597,7 +597,7 @@
   <!-- ✅ Header -->
   <header>
     <div class="logo">
-      <img src="logo.jpg" alt="Logo">
+      <img src="./images/logo.jpg" alt="Logo">
       <span>Ermunai Organic Farm Foods</span>
     </div>
 
