--- a/user-authentication/shop.html
+++ b/user-authentication/shop.html
@@ -192,7 +192,7 @@
 
   <header>
     <div class="logo">
-      <img src="logo.jpg" alt="Logo" />
+      <img src="./images/logo.jpg" alt="Logo" />
       <span>Ermunai Organic Farm Foods</span>
     </div>
 
