--- a/index.html
+++ b/index.html
@@ -3,66 +3,93 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Login</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background: #151515;
+      color: #fff;
       margin: 0;
+      height: 100vh;
+      display: grid;
+      place-items: center;
     }
 
     .login-box {
-      background: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      width: 300px;
+      width: 90%;
+      max-width: 360px;
+      background: #222;
+      padding: 30px 28px;
+      border-radius: 14px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.45);
       text-align: center;
     }
 
     h2 {
-      margin-bottom: 20px;
-      color: #333;
+      margin: 0 0 16px;
+      color: #ffcc00;
+      font-size: 24px;
+    }
+
+    input,
+    button {
+      width: 100%;
+      padding: 12px;
+      border-radius: 8px;
+      font-size: 15px;
     }
 
     input {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+      border: 1px solid #333;
+      margin: 8px 0;
+      background: #111;
+      color: #fff;
+      outline: none;
+    }
+
+    input:focus {
+      border-color: #ffcc00;
+      box-shadow: 0 0 4px #ffcc00;
     }
 
     button {
-      background: #4CAF50;
-      color: white;
       border: none;
-      padding: 10px;
-      width: 100%;
-      border-radius: 6px;
+      background: #ffcc00;
+      color: #000;
+      font-weight: 700;
       cursor: pointer;
-      font-size: 16px;
+      transition: 0.3s ease;
     }
 
     button:hover {
-      background: #45a049;
+      background: #e6b800;
     }
 
     .msg {
-      margin-top: 10px;
+      margin-top: 12px;
+      min-height: 20px;
       font-size: 14px;
+    }
+
+    @media (max-width: 480px) {
+      .login-box {
+        padding: 24px 20px;
+        border-radius: 10px;
+      }
+
+      h2 {
+        font-size: 20px;
+      }
     }
   </style>
 </head>
 
 <body>
   <div class="login-box">
-    <h2>Admin Login</h2>
+    <h2><i class="fa-solid fa-user-shield"></i> Admin Login</h2>
     <form id="adminLoginForm">
       <input type="email" id="email" placeholder="Admin Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -73,11 +100,10 @@
 
   <!-- Firebase SDKs -->
   <script type="module">
-    // Import Firebase
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-    // ✅ Your Firebase config
+    // ✅ Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyCbfdG2XU302FuZx0MapVTRmb3Qtaa-hA8",
       authDomain: "ermunai-e-commerce-project.firebaseapp.com",
@@ -88,14 +114,12 @@
       measurementId: "G-CZJZ4HLCMR"
     };
 
-    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
     // 🔑 Set your admin email
     const ADMIN_EMAIL = "ermunai.12543@gmail.com";
 
-    // Handle login
     const form = document.getElementById("adminLoginForm");
     const msg = document.getElementById("msg");
 
@@ -110,9 +134,8 @@
         const userCredential = await signInWithEmailAndPassword(auth, email, password);
         const user = userCredential.user;
 
-        // ✅ Check if logged-in user is the admin
         if (user.email === ADMIN_EMAIL) {
-          msg.style.color = "green";
+          msg.style.color = "limegreen";
           msg.textContent = "✅ Login successful! Redirecting...";
           setTimeout(() => {
             window.location.href = "admin-dashboard.html";
@@ -120,7 +143,7 @@
         } else {
           msg.style.color = "crimson";
           msg.textContent = "⚠️ You are not admin!";
-          await signOut(auth); // logout non-admin user
+          await signOut(auth);
         }
       } catch (error) {
         msg.style.color = "crimson";
@@ -129,4 +152,5 @@
     });
   </script>
 </body>
+
 </html>
