--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #151515;
+      background: #dddddd;
       color: #fff;
       margin: 0;
       height: 100vh;
@@ -21,7 +21,7 @@
     .login-box {
       width: 90%;
       max-width: 360px;
-      background: #222;
+      background: #fff5f5;
       padding: 30px 28px;
       border-radius: 14px;
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.45);
@@ -30,13 +30,13 @@
 
     h2 {
       margin: 0 0 16px;
-      color: #ffcc00;
+      color: #202020;
       font-size: 24px;
     }
 
     input,
     button {
-      width: 100%;
+      width: 90%;
       padding: 12px;
       border-radius: 8px;
       font-size: 15px;
@@ -45,19 +45,19 @@
     input {
       border: 1px solid #333;
       margin: 8px 0;
-      background: #111;
+      background: rgb(238, 238, 238);
       color: #fff;
       outline: none;
     }
 
     input:focus {
-      border-color: #ffcc00;
-      box-shadow: 0 0 4px #ffcc00;
+      border-color: #888888;
+      box-shadow: 0 0 4px #a8a8a8;
     }
 
     button {
       border: none;
-      background: #ffcc00;
+      background: #23f060;
       color: #000;
       font-weight: 700;
       cursor: pointer;
@@ -65,7 +65,7 @@
     }
 
     button:hover {
-      background: #e6b800;
+      background: #19be4a;
     }
 
     .msg {
