--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       border: 1px solid #333;
       margin: 8px 0;
       background: rgb(238, 238, 238);
-      color: #fff;
+      color: #000000;
       outline: none;
     }
 
