--- a/dashboard-product-page.html
+++ b/dashboard-product-page.html
@@ -95,7 +95,7 @@
             color: var(--primary);
         }
 
-        .logout-btn {
+        .logoutBtn {
             background: #ff5f5f;
             color: white;
             border: none;
@@ -104,7 +104,7 @@
             cursor: pointer;
         }
 
-        .logout-btn:hover {
+        .logoutBtn:hover {
             background: #e65050;
         }
 
@@ -282,7 +282,7 @@
     <div class="main">
         <header>
             <h1>Product Management</h1>
-            <button class="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</button>
+            <button class="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </header>
 
         <div class="content">
