--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -105,7 +105,7 @@
             flex-grow: 1;
         }
 
-        .logout-btn {
+        .logoutBtn {
             background: #ff5f5f;
             color: var(--white);
             border: none;
@@ -115,7 +115,7 @@
             font-size: 0.95rem;
         }
 
-        .logout-btn:hover {
+        .logoutBtn:hover {
             background: #e65050;
         }
 
@@ -195,7 +195,7 @@
         <header>
             <img src="logo.jpg" alt="Erumunai Logo" class="logo" />
             <h1>Dashboard</h1>
-            <button class="logout-btn" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</button>
+            <button class="logoutBtn" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </header>
 
         <div class="content">
@@ -418,6 +418,15 @@
             const ch = new Chart(ctx, cfg);
             setter && setter(ch);
         }
+        logoutBtn.addEventListener("click", async () => {
+            try {
+                await signOut(auth);
+                alert("Logged out");
+                console.log("Signed out");
+            } catch (e) {
+                console.error("Sign out error:", e);
+            }
+        });
 
         listenProducts();
         listenOrdersAndAggregate();
