--- a/dashboard-order-page.html
+++ b/dashboard-order-page.html
@@ -7,6 +7,7 @@
   <title>Erumunai Admin — Orders</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -27,7 +28,7 @@
     }
 
     body {
-      font-family: "Segoe UI", sans-serif;
+      font-family: "Inter", sans-serif;
       color: var(--text);
       background: var(--bg);
       display: flex;
@@ -40,7 +41,6 @@
       color: inherit;
     }
 
-    /* Sidebar */
     .sidebar {
       width: 250px;
       background: var(--primary);
@@ -49,11 +49,14 @@
       flex-direction: column;
       align-items: center;
       padding: 2rem 1rem;
+      border-top-right-radius: var(--radius);
+      border-bottom-right-radius: var(--radius);
     }
 
     .sidebar h2 {
       margin-bottom: 2rem;
       font-size: 1.25rem;
+      font-weight: 700;
     }
 
     .nav {
@@ -66,18 +69,22 @@
     }
 
     .nav a {
-      display: block;
+      display: flex;
+      align-items: center;
+      gap: 10px;
       padding: 0.75rem 1rem;
       border-radius: var(--radius);
       transition: background var(--transition);
+      font-weight: 600;
     }
 
     .nav a:hover,
     .nav a.active {
       background: var(--accent);
+      color: var(--text);
+      box-shadow: var(--shadow);
     }
 
-    /* Main content */
     .main {
       flex: 1;
       background: #f7f7f7;
@@ -86,22 +93,45 @@
     }
 
     .main h1 {
-      color: #4a7c59;
+      color: #386144;
       margin-bottom: 1.5rem;
+      font-weight: 700;
+      letter-spacing: -0.5px;
+    }
+
+    #statusMessage {
+      padding: 12px;
+      margin-bottom: 1.5rem;
+      border-radius: var(--radius);
+      font-weight: 600;
+      display: none;
+    }
+
+    .success {
+      background: #d4edda;
+      color: #155724;
+      border: 1px solid #c3e6cb;
+    }
+
+    .error {
+      background: #f8d7da;
+      color: #721c24;
+      border: 1px solid #f5c6cb;
     }
 
     table {
       width: 100%;
-      border-collapse: collapse;
-      background: #fff;
+      border-collapse: separate;
+      border-spacing: 0;
+      background: var(--white);
       box-shadow: var(--shadow);
       border-radius: 8px;
       overflow: hidden;
     }
 
     thead {
-      background: #4a7c59;
-      color: #fff;
+      background: var(--primary);
+      color: var(--white);
     }
 
     th,
@@ -109,11 +139,23 @@
       padding: 12px 15px;
       text-align: left;
       border-bottom: 1px solid #eee;
-      vertical-align: top;
+      vertical-align: middle;
+    }
+
+    thead th:first-child {
+      border-top-left-radius: 8px;
+    }
+
+    thead th:last-child {
+      border-top-right-radius: 8px;
     }
 
     tbody tr:hover {
       background: #fafafa;
+    }
+
+    tbody tr:last-child td {
+      border-bottom: none;
     }
 
     select {
@@ -121,17 +163,26 @@
       border-radius: 6px;
       border: 1px solid #ccc;
       cursor: pointer;
+      background-color: var(--white);
+      transition: border-color var(--transition);
+    }
+
+    select:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 2px rgba(74, 124, 89, 0.2);
     }
 
     .products-list {
       font-size: 0.9rem;
-      color: #333;
+      color: #555;
     }
 
-    /* Mobile responsiveness */
-    @media (max-width: 768px) {
+    @media (max-width:768px) {
       body {
         flex-direction: column;
+        height: auto;
+        overflow-y: auto;
       }
 
       .sidebar {
@@ -139,46 +190,120 @@
         flex-direction: row;
         justify-content: space-around;
         padding: 1rem;
+        border-radius: 0;
+      }
+
+      .sidebar h2 {
+        display: none;
+      }
+
+      .nav {
+        display: flex;
+        justify-content: space-between;
+        gap: 0.5rem;
+      }
+
+      .nav li+li {
+        margin-top: 0;
+      }
+
+      .nav a {
+        padding: 0.5rem;
+        font-size: 0.85rem;
+        text-align: center;
+        flex-direction: column;
+        gap: 5px;
       }
 
       .main {
         padding: 1rem;
       }
 
-      table {
-        font-size: 0.85rem;
+      table,
+      thead,
+      tbody,
+      th,
+      td,
+      tr {
+        display: block;
       }
 
-      th,
+      thead {
+        display: none;
+      }
+
+      tr {
+        margin-bottom: 15px;
+        border: 1px solid #ddd;
+        border-radius: 8px;
+      }
+
       td {
-        padding: 8px 10px;
+        text-align: right;
+        padding-left: 50%;
+        position: relative;
+        border: none;
+      }
+
+      td:before {
+        content: attr(data-label);
+        position: absolute;
+        left: 10px;
+        width: calc(50% - 20px);
+        padding-right: 10px;
+        white-space: nowrap;
+        text-align: left;
+        font-weight: 600;
+        color: var(--primary);
+      }
+
+      .products-list {
+        text-align: right;
+      }
+
+      select {
+        width: 100%;
       }
     }
   </style>
+
+  <!-- Firebase config & app ID -->
+  <script>
+    const __firebase_config = JSON.stringify({
+      apiKey: "AIzaSyCbfdG2XU302FuZx0MapVTRmb3Qtaa-hA8",
+      authDomain: "ermunai-e-commerce-project.firebaseapp.com",
+      projectId: "ermunai-e-commerce-project",
+      storageBucket: "ermunai-e-commerce-project.appspot.com",
+      messagingSenderId: "365240050790",
+      appId: "1:365240050790:web:2d4867d6ab4f93a661f9a7"
+    });
+    const __app_id = "ermunai-dashboard";
+  </script>
 </head>
 
 <body>
-  <!-- Sidebar -->
   <aside class="sidebar">
     <h2>Ermunai Admin</h2>
     <ul class="nav">
-      <li><a href="admin-dashboard.html" data-page="dashboard">Dashboard</a></li>
-      <li><a href="dashboard-product-page.html" data-page="products">Product Details</a></li>
-      <li><a href="dashboard-order-page.html" data-page="orders" class="active">Order Details</a></li>
-      <li><a href="daashboard-setting.html" data-page="settings">Settings</a></li>
+      <li><a href="admin-dashboard.html" data-page="dashboard"><i class="fas fa-home"></i> Dashboard</a></li>
+      <li><a href="dashboard-product-page.html" data-page="products"><i class="fas fa-box"></i> Products</a></li>
+      <li><a href="#" data-page="orders" class="active"><i class="fas fa-clipboard-list"></i> Orders</a></li>
+      <li><a href="dashboard-setting.html" data-page="settings"><i class="fas fa-cog"></i> Settings</a></li>
     </ul>
   </aside>
 
-  <!-- Main content -->
   <div class="main">
     <h1>Customer Orders</h1>
+    <div id="statusMessage"></div>
+
     <table>
       <thead>
         <tr>
           <th>Order ID</th>
-          <th>Customer</th>
+          <th>Customer (User ID)</th>
           <th>Address</th>
-          <th>Payment</th>
+          <th>Total Amount</th>
+          <th>Contact Number</th>
           <th>Date</th>
           <th>Products</th>
           <th>Status</th>
@@ -186,60 +311,93 @@
       </thead>
       <tbody id="ordersTable">
         <tr>
-          <td colspan="7" style="text-align:center; padding:20px;">⏳ Loading orders...</td>
+          <td colspan="8" style="text-align:center; padding:20px;">
+            <i class="fas fa-circle-notch fa-spin"></i> Initializing Firebase and loading authentication...
+          </td>
         </tr>
       </tbody>
     </table>
+
   </div>
 
   <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getFirestore, collection, getDocs, updateDoc, doc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+    import { getFirestore, collection, getDocs, updateDoc, doc, setLogLevel } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+    import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
-// 🔑 Firebase Config
-    const firebaseConfig = {
-      apiKey: "AIzaSyCbfdG2XU302FuZx0MapVTRmb3Qtaa-hA8",
-      authDomain: "ermunai-e-commerce-project.firebaseapp.com",
-      projectId: "ermunai-e-commerce-project",
-      storageBucket: "ermunai-e-commerce-project.appspot.com",
-      messagingSenderId: "365240050790",
-      appId: "1:365240050790:web:2d4867d6ab4f93a661f9a7",
-      measurementId: "G-CZJZ4HLCMR"
-    };
+    setLogLevel('Debug');
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-const auth = getAuth(app);
+    const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+    const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
+    const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
 
-const ordersTable = document.getElementById("ordersTable");
+    if (Object.keys(firebaseConfig).length === 0) {
+      console.error("FATAL: Firebase configuration is missing.");
+      document.getElementById("ordersTable").innerHTML =
+        `<tr><td colspan="8" style="text-align:center; color:red; padding:20px;">⚠️ Firebase configuration error.</td></tr>`;
+    }
 
-// 🔹 Check Auth
-onAuthStateChanged(auth, (user) => {
-  if (user) {
-    console.log("✅ Logged in as:", user.email);
-    loadOrders(); // load only after login
-  } else {
-    console.log("❌ No user is logged in");
-    ordersTable.innerHTML = `<tr><td colspan="7" style="text-align:center; padding:20px;">🚫 Please log in as admin</td></tr>`;
-  }
-});
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const auth = getAuth(app);
 
+    const ordersTable = document.getElementById("ordersTable");
+    const statusMessage = document.getElementById("statusMessage");
 
+    function showStatus(message, type) {
+      statusMessage.textContent = message;
+      statusMessage.className = type;
+      statusMessage.style.display = 'block';
+      setTimeout(() => {
+        statusMessage.style.display = 'none';
+      }, 5000);
+    }
 
-    // 🔹 Fetch orders
+    async function setupAuth() {
+      try {
+        if (initialAuthToken) {
+          await signInWithCustomToken(auth, initialAuthToken);
+        } else {
+          await signInAnonymously(auth);
+        }
+        console.log("✅ Auth setup done");
+      } catch (error) {
+        console.error("❌ Authentication failed:", error);
+      }
+    }
+
     async function loadOrders() {
+      ordersTable.innerHTML =
+        `<tr><td colspan="8" style="text-align:center; padding:20px;">
+          <i class="fas fa-circle-notch fa-spin"></i> Loading orders...
+        </td></tr>`;
+
       try {
         const querySnapshot = await getDocs(collection(db, "orders"));
         ordersTable.innerHTML = "";
-
         if (querySnapshot.empty) {
-          ordersTable.innerHTML = `<tr><td colspan="7" style="text-align:center; padding:20px;">🚫 No orders found</td></tr>`;
+          ordersTable.innerHTML =
+            `<tr><td colspan="8" style="text-align:center; padding:20px;">🚫 No orders found</td></tr>`;
           return;
         }
 
         querySnapshot.forEach(docSnap => {
           const order = docSnap.data();
+
+          // Handle datePlaced field
+          const rawDate = order.datePlaced;
+          let dateDisplay = 'N/A';
+          if (rawDate) {
+            if (typeof rawDate === 'string') {
+              dateDisplay = rawDate;
+            } else if (rawDate.toDate) {
+              dateDisplay = new Date(rawDate.toDate()).toLocaleString();
+            } else if (rawDate instanceof Date) {
+              dateDisplay = rawDate.toLocaleString();
+            } else if (typeof rawDate === 'number') {
+              dateDisplay = new Date(rawDate).toLocaleString();
+            }
+          }
 
           const itemsHtml = order.items && Array.isArray(order.items)
             ? order.items.map(i => `${i.name} (x${i.quantity})`).join("<br>")
@@ -247,14 +405,15 @@ onAuthStateChanged(auth, (user) => {
 
           const tr = document.createElement("tr");
           tr.innerHTML = `
-            <td>${docSnap.id}</td>
-            <td>${order.customerName || "N/A"}</td>
-            <td>${order.address || "N/A"}</td>
-            <td>${order.paymentMethod || "N/A"} - ₹${order.amount || 0}</td>
-            <td>${order.date || new Date().toLocaleString()}</td>
-            <td class="products-list">${itemsHtml}</td>
-            <td>
-              <select data-id="${docSnap.id}">
+            <td data-label="Order ID">${docSnap.id.substring(0, 8)}...</td>
+            <td data-label="Customer ID">${order.customerName || "N/A"} (ID: ${order.userId ? order.userId.substring(0, 8) + '...' : 'N/A'})</td>
+            <td data-label="Address">${order.address || "N/A"}</td>
+            <td data-label="Total Amount">₹${order.totalAmount != null ? order.totalAmount : "N/A"}</td>
+            <td data-label="Contact Number">${order.phone || "N/A"}</td>
+            <td data-label="Date">${dateDisplay}</td>
+            <td data-label="Products" class="products-list">${itemsHtml}</td>
+            <td data-label="Status">
+              <select data-id="${docSnap.id}" data-current-status="${order.status}">
                 <option value="Pending" ${order.status === "Pending" ? "selected" : ""}>Pending</option>
                 <option value="Shipped" ${order.status === "Shipped" ? "selected" : ""}>Shipped</option>
                 <option value="Delivered" ${order.status === "Delivered" ? "selected" : ""}>Delivered</option>
@@ -265,22 +424,49 @@ onAuthStateChanged(auth, (user) => {
           ordersTable.appendChild(tr);
         });
 
-        // 🔹 Status update
         document.querySelectorAll("select").forEach(sel => {
           sel.addEventListener("change", async (e) => {
             const id = e.target.dataset.id;
             const newStatus = e.target.value;
-            await updateDoc(doc(db, "orders", id), { status: newStatus });
-            alert("✅ Order status updated to " + newStatus);
+            const previousStatus = e.target.dataset.currentStatus;
+
+            if (newStatus === previousStatus) return;
+
+            showStatus(`Updating order ${id.substring(0, 8)}... to ${newStatus}...`, 'success');
+
+            try {
+              await updateDoc(doc(db, "orders", id), { status: newStatus });
+              e.target.dataset.currentStatus = newStatus;
+              showStatus(`✅ Order ${id.substring(0, 8)}… status updated to ${newStatus}`, 'success');
+            } catch (error) {
+              console.error("❌ Error updating order status:", error);
+              e.target.value = previousStatus;
+              showStatus(`❌ Failed to update order ${id.substring(0, 8)} status. Check console.`, 'error');
+            }
           });
         });
+
       } catch (error) {
         console.error("❌ Error loading orders:", error);
-        ordersTable.innerHTML = `<tr><td colspan="7" style="text-align:center; color:red; padding:20px;">⚠️ Error loading orders</td></tr>`;
+        ordersTable.innerHTML =
+          `<tr><td colspan="8" style="text-align:center; color:red; padding:20px;">
+            ⚠️ Access Denied or Error loading orders.
+          </td></tr>`;
+        showStatus('❌ Failed to load orders. Check console for details.', 'error');
       }
     }
 
-    // loadOrders();
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        loadOrders();
+      } else {
+        ordersTable.innerHTML =
+          `<tr><td colspan="8" style="text-align:center; padding:20px;">🚫 Please wait while we authenticate...</td></tr>`;
+      }
+    });
+
+    setupAuth();
   </script>
 </body>
+
 </html>
